# pytarpc

./: .gitignore  Cargo.toml  README.md
client/: client.py
example/: README.md
example/python_client/: example_client.py
example/rpc-model/: Cargo.toml
example/rpc-model/src/: lib.rs  model.rs
example/tarpc-server/: Cargo.toml
example/tarpc-server/src/: main.rs
pyo3-generator-macro/: Cargo.toml
rpc-model/: Cargo.toml  pyproject.toml
rpc-model/src/: client.rs  lib.rs  model.rs
src/: lib.rs
tarpc-server/: Cargo.toml
tarpc-server/src/: main.rs
