[package]
name = "pytarpc"
version = "0.1.0"
edition = "2024"
authors = ["Diego Pardo <https://github.com/DGPardo/pytarpc>"]
description = "Enabling python-rust API communication over tarpc"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "development-tools::ffi"]
readme = "README.md"
repository = "https://github.com/DGPardo/pytarpc"
documentation  = "https://github.com/DGPardo/pytarpc"
homepage = "https://github.com/DGPardo/pytarpc"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.25", features = ["attributes", "tokio-runtime"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0", features = ["full", "extra-traits"] }
tarpc = { version = "0.37.0", features = ["serde-transport", "tcp"] }
tokio = { version = "1.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }
