[package]
name = "pyo3-generator-macro"
version = "0.1.0"
edition = "2024"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
pyo3 = { version = "0.25.0", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.25", features = ["attributes", "tokio-runtime"] }
tarpc = { version = "0.33", features = ["serde-transport", "tcp"] }
tokio = { version = "1.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }
serde = { version = "1.0", features = ["derive"] }
